WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61199
WebKit2: Media files cannot be saved in the Application Cache due to a sandbox violation
https://bugs.webkit.org/show_bug.cgi?id=61199
Summary
WebKit2: Media files cannot be saved in the Application Cache due to a sandbo...
Sam Weinig
Reported
2011-05-20 11:15:18 PDT
WebKit2: Media files cannot be saved in the Application Cache due to a sandbox violation
Attachments
Patch
(7.07 KB, patch)
2011-05-20 11:16 PDT
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-05-20 11:16:47 PDT
Created
attachment 94244
[details]
Patch
Sam Weinig
Comment 2
2011-05-20 11:18:42 PDT
Committed
r86967
: <
http://trac.webkit.org/changeset/86967
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug