third_party/WebKit/Source/WebKit2/Shared/WebProcessCreationParameters.h
@@ -54,9 +54,7 @@ struct WebProcessCreationParameters {
     String injectedBundlePath;
     SandboxExtension::Handle injectedBundlePathExtensionHandle;
 
-    String applicationCacheDirectory;
-    SandboxExtension::Handle applicationCacheDirectoryExtensionHandle;
-    
+    String applicationCacheDirectory;    
     String databaseDirectory;
     String localStorageDirectory;
     Vector<String> urlSchemesRegistererdAsEmptyDocument;
